--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Used Car Price Prediction Model</title>
+    <title>US Car Price Prediction Model</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -73,95 +73,98 @@
 <body>
 
 <div class="container">
-    <h1>Used Car Price Prediction Model</h1>
-    <div class="form-group">
-        <label for="price">Price (US Dollar $):</label>
-        <input type="range" id="price" name="price" min="0" max="300000" step="1000" value="150000" oninput="updatePriceOutput(this.value)">
-        <div class="slider-output" id="price-output">$300,000</div>
-    </div>
+    <h1>US Car Price Prediction Model</h1>
+    <form action="/predict" method="POST">
+        <div class="form-group">
+            <label for="price">Original Price (US Dollar $):</label>
+            <input type="range" id="price" name="price" min="0" max="300000" step="1000" value="150000" oninput="updatePriceOutput(this.value)">
+            <div class="slider-output" id="price-output">$150,000</div>
+        </div>
 
-    <div class="form-group">
-        <label for="condition">Condition:</label>
-        <select id="condition" name="condition">
-            <option value="new">New</option>
-            <option value="used">Poor</option>
-        </select>
-    </div>
+        <div class="form-group">
+            <label for="condition">Condition:</label>
+            <select id="condition" name="condition">
+                <option value="new">New</option>
+                <option value="used">Poor</option>
+            </select>
+        </div>
 
-    <div class="form-group">
-        <label for="year">Year:</label>
-        <select id="year" name="year">
-            <script>
-                for (let i = 2024; i >= 1990; i--) {
-                    document.write('<option value="' + i + '">' + i + '</option>');
-                }
-            </script>
-        </select>
-    </div>
+        <div class="form-group">
+            <label for="year">Year:</label>
+            <select id="year" name="year">
+                <script>
+                    for (let i = 2024; i >= 1990; i--) {
+                        document.write('<option value="' + i + '">' + i + '</option>');
+                    }
+                </script>
+            </select>
+        </div>
 
-    <div class="form-group">
-        <label for="brand">Brand:</label>
-        <select id="brand" name="brand" onchange="updateModels()">
-            <option value="mazda">Mazda</option>
-            <option value="jaguar">Jaguar</option>
-            <option value="land-rover">Land Rover</option>
-            <option value="porsche">Porsche</option>
-            <option value="volvo">Volvo</option>
-            <option value="chevrolet">Chevrolet</option>
-            <option value="ford">Ford</option>
-            <option value="hyundai">Hyundai</option>
-            <option value="tesla">Tesla</option>
-            <option value="lexus">Lexus</option>
-            <option value="mercedes-benz">Mercedes-Benz</option>
-            <option value="subaru">Subaru</option>
-            <option value="volkswagen">Volkswagen</option>
-            <option value="audi">Audi</option>
-            <option value="honda">Honda</option>
-            <option value="jeep">Jeep</option>
-            <option value="bmw">BMW</option>
-            <option value="nissan">Nissan</option>
-            <option value="kia">Kia</option>
-            <option value="toyota">Toyota</option>
-        </select>
-    </div>
+        <div class="form-group">
+            <label for="brand">Brand:</label>
+            <select id="brand" name="brand" onchange="updateModels()">
+                <option value="mazda">Mazda</option>
+                <option value="jaguar">Jaguar</option>
+                <option value="land-rover">Land Rover</option>
+                <option value="porsche">Porsche</option>
+                <option value="volvo">Volvo</option>
+                <option value="chevrolet">Chevrolet</option>
+                <option value="ford">Ford</option>
+                <option value="hyundai">Hyundai</option>
+                <option value="tesla">Tesla</option>
+                <option value="lexus">Lexus</option>
+                <option value="mercedes-benz">Mercedes-Benz</option>
+                <option value="subaru">Subaru</option>
+                <option value="volkswagen">Volkswagen</option>
+                <option value="audi">Audi</option>
+                <option value="honda">Honda</option>
+                <option value="jeep">Jeep</option>
+                <option value="bmw">BMW</option>
+                <option value="nissan">Nissan</option>
+                <option value="kia">Kia</option>
+                <option value="toyota">Toyota</option>
+            </select>
+        </div>
 
-    <div class="form-group">
-        <label for="model">Model:</label>
-        <select id="model" name="model">
-            <!-- Models will be updated based on brand selection -->
-        </select>
-    </div>
+        <div class="form-group">
+            <label for="model">Model:</label>
+            <select id="model" name="model">
+                <!-- Models will be updated based on brand selection -->
+            </select>
+        </div>
 
-    <div class="form-group">
-        <label for="mileage">Mileage (miles):</label>
-        <input type="range" id="mileage" name="mileage" min="0" max="250000" step="5000" value="125000" oninput="updateMileageOutput(this.value)">
-        <div class="slider-output" id="mileage-output">125,000 miles</div>
-    </div>
+        <div class="form-group">
+            <label for="mileage">Mileage:</label>
+            <input type="range" id="mileage" name="mileage" min="0" max="250000" step="5000" value="125000" oninput="updateMileageOutput(this.value)">
+            <div class="slider-output" id="mileage-output">125,000 miles</div>
+        </div>
 
-    <div class="form-group">
-        <label for="color">Color:</label>
-        <select id="color" name="color">
-            <option value="black">Black</option>
-            <option value="white">White</option>
-            <option value="red">Red</option>
-            <option value="blue">Blue</option>
-            <option value="silver">Silver</option>
-            <option value="gray">Gray</option>
-            <option value="green">Green</option>
-        </select>
-    </div>
+        <div class="form-group">
+            <label for="color">Color:</label>
+            <select id="color" name="color">
+                <option value="black">Black</option>
+                <option value="white">White</option>
+                <option value="red">Red</option>
+                <option value="blue">Blue</option>
+                <option value="silver">Silver</option>
+                <option value="gray">Gray</option>
+                <option value="green">Green</option>
+            </select>
+        </div>
 
-
-    <div class="form-actions">
-        <button type="submit">Predict Price</button>
-    </div>
+        <div class="form-actions">
+            <button type="submit">Predict Price</button>
+        </div>
+    </form>
 </div>
 
 <script>
+    // updates the price while using the slider
     function updatePriceOutput(value) {
         document.getElementById('price-output').textContent = '$' + parseInt(value).toLocaleString();
     }
 
+    // updates the mileage while using the slider
     function updateMileageOutput(value) {
         document.getElementById('mileage-output').textContent = parseInt(value).toLocaleString() + ' miles';
     }
@@ -233,7 +236,8 @@
             case 'toyota':
                 models = ['Camry', 'Corolla', 'Highlander'];
     }
-    // Populate model options
+
+    // Populates the model options
     models.forEach(function(model) {
             const option = document.createElement('option');
             option.value = model.toLowerCase().replace(/\s+/g, '-');
